--- a/index.html
+++ b/index.html
@@ -5,18 +5,33 @@ To change this template use Tools | Templates.
 <html lang="es">
 <head>
     <title>Via Santina , Moda Para Mujeres de Verdad!!</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <header>
-    </header>
-    <nav>
-    </nav>
-    <section>
-        <figure>
+        <figure id="logo">
             <img src="img/fondovs.jpg"/>
         </figure>
+    </header>
+    <nav>
+        <ul>
+            <li><a href=""/>Inicio</li>
+            <li><a href=""/>Galeria</li>
+            <li><a href=""/>Contacto</li>
+        </ul>
+    </nav>
+    <section>
     </section>
     <footer>
+        <div class="caja-footer">
+            aca redes sociales
+        </div>
+        <div class="caja-footer">
+            aca sucursal 1
+        </div>
+        <div class="caja-footer">
+            aca sucursal 2
+        </div>
     </footer>
 </body>
 </html>
