--- a/index.html
+++ b/index.html
@@ -18,19 +18,37 @@ To change this template use Tools | Templates.
             <li><a href=""/>Inicio</li>
             <li><a href=""/>Galeria</li>
             <li><a href=""/>Contacto</li>
+            <li><a href=""/>xxxxxxxx</li>
         </ul>
     </nav>
     <section>
+        <article>
+            aca jquery
+        </article>
+        <article>
+            aca jquery
+        </article>
+        <article>
+            aca jquery
+        </article>
     </section>
     <footer>
         <div class="caja-footer">
             aca redes sociales
         </div>
         <div class="caja-footer">
-            aca sucursal 1
+            <p> Sucursal Galeria San Martin </p>
+            <p> San Martin 48 (Galeria San Martin) local 6 y 7</p>
+            <p> Centro - Cordoba</p>
+            <p> Telefono: (0351)-4393939</p>
+            <p> E_mail:info@viasantina.com.ar</p>
         </div>
         <div class="caja-footer">
-            aca sucursal 2
+            <p>Sucursal Belgrano</p>
+            <p>Belgrano 110</p>
+            <p>Centro - Cordoba</p>
+            <p>Telefono: (0351)-4212097</p>
+            <p>E_mail:info@viasantina.com.ar</p>
         </div>
     </footer>
 </body>
